handled: sending eMail and login with new password

--- a/.development.env
+++ b/.development.env
@@ -6,3 +6,8 @@ DB_PSWD=Vadym1966
 DB_NAME=point-prism
 SECRET_KEY=pointPrism_secret_dflbkjfd23r32ljn1
 JWT_EXP=60
+UKR_NET_USER=vadimz@ukr.net
+UKR_NET_PASS=FAGO9qfUlpzw6BdI
+UKR_NET_SMTP=smtp.ukr.net
+UKR_NET_PORT=465
+UKR_NET_TLS=TLS
