--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cross-env": "^7.0.3",
     "emailjs": "^3.7.0",
     "mysql2": "^2.3.3",
+    "pusher": "^5.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
