--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   db:
-    image: mysql
+    image: vadymzakharchuk/mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
