--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/sequelize": "^8.0.0",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.1.4",
+    "@nestjs/websockets": "^8.2.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -41,7 +42,6 @@
     "sequelize": "^6.9.0",
     "sequelize-cli": "^6.3.0",
     "sequelize-typescript": "^2.1.1",
-    "socket.io": "^4.2.0",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   },
