--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.13.1",
     "cross-env": "^7.0.3",
     "emailjs": "^3.7.0",
+    "freeice": "^2.2.2",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
