--- a/.development.env
+++ b/.development.env
@@ -1,13 +1,13 @@
 APP_PORT=5000
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=root
-DB_PSWD=Vadym1966
+DB_USER=db_user_name
+DB_PSWD=db_admin_pass
 DB_NAME=point-prism
 SECRET_KEY=pointPrism_secret_dflbkjfd23r32ljn1
 JWT_EXP=60
-UKR_NET_USER=vadimz@ukr.net
-UKR_NET_PASS=FAGO9qfUlpzw6BdI
+UKR_NET_USER=eMail@mail.com
+UKR_NET_PASS='password'
 UKR_NET_SMTP=smtp.ukr.net
 UKR_NET_PORT=465
 UKR_NET_TLS=TLS
